[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/LoadDialog/LoadDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -106.0
margin_right = 190.0
margin_bottom = 106.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 212.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "ImperiaNova"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=[
"buttons",
]]
margin_top = 76.0
margin_right = 360.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=[
"buttons",
]]
margin_top = 118.0
margin_right = 360.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=[
"buttons",
]]
margin_top = 160.0
margin_right = 360.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadDialog" parent="." instance=ExtResource( 2 )]
